<resources>
    <string name="app_name">FirebaseTutorial</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="welcome_to_firebase_tutorial">Welcome to Firebase Tutorial!</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="create_account">Create Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in_with_email">Sign in\nwith Email</string>
    <string name="save_settings">Save</string>
    <string name="status">Status</string>
</resources>